--- a/dicer/pubspec.yaml
+++ b/dicer/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   provider: ^4.3.2+2
   flutter_svg: ^0.19.1
+  splashscreen: ^1.3.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -55,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icon/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
